# electricity-tariff-optimizer

./: .env.example  .gitignore  LICENSE  README.md  app.py  pyproject.toml  requirements.txt
